# jira_cli

./: README.md  pyproject.toml
app/: main.py
app/api/: jira_api.py
app/common/: shared_functions.py
app/subcommands/: base_subcommand.py  create_issue.py  get_issue.py  search_issues.py  transition_issue.py
