[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Lukas <lukasindre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
isort = "^5.13.0"
ruff = "^0.1.7"

[tool.poetry.scripts]
jira = "app.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
